Bug fixing color of tab switcher in dark mode

--- a/fe/styles/_app.sass
+++ b/fe/styles/_app.sass
@@ -1048,9 +1048,11 @@ nav.header
 					flex: 1
 
 			.tab-switcher
+				border-top: 1px solid var(--border-default-color)
 				position: absolute
 				top: 56px
-				background: white
+				background: var(--nav-nav-bg)
+				border-radius: 0 0 8px 8px
 				padding: 10px 20px
 
 				.navigation-link
